# CFD-Multiphysics-Simulator-in-NVFORTRAN-for-CUDA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
kernel/: cell.f90  cfd.f90  cfdtest.f90  cfdtypes.f90  cfluid.f90  chebyshev.f90  d01b.f90  fluid.f90  logger.f90  matrix.f90  noether.f90  numtype.f90  tangent.f90
kernel/data/: fort.100  fort.12  fort.14  fort.16  fort.18  fort.2  fort.22  fort.24  fort.26  fort.28  fort.32  fort.34  fort.36  fort.38  fort.4  fort.42  fort.44  fort.46  fort.48  fort.52  fort.54  fort.56  fort.58  fort.6  fort.60  fort.62  fort.64  fort.66  fort.68  fort.70  fort.72  fort.74  fort.76  fort.78  fort.8  fort.80  fort.82  fort.84  fort.86  fort.88  (+5 more)
kernel/scripts/: empty
kernel/testing/: cfdtest.f90  cfluidtest.f90  simtest.f90
pyinterface/: plot.py  smooth.py
scripts/: clean
src/: hello.cu  test.ipynb
